--- a/reservation-services.properties
+++ b/reservation-services.properties
@@ -2,9 +2,9 @@
   "propertySources": [
     {
       "source": {
-        "server.port": "8080",
-        "spring.cloud.stream.bindings.input": "reservations",
-        "message": "Hello World"
+        "server.port": 8080,
+        "spring.cloud.stream.bindings.input": reservations,
+        "message": Hello World
       },
       "name": "https://github.com/urvin-shah/reservation-config-repo/reservation-services.properties"
     }
